TP-03/1-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app11-a
  name: app11-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app11-a
  template:
    metadata:
      labels:
        app: app11-a
    spec:
      containers:
      - name: color
        image: webofmars/colors:blue
        resources: {}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app11-a
  name: app11-a
spec:
  type: ClusterIP
  selector:
    app: app11-a
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app11-b
  name: app11-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app11-b
  template:
    metadata:
      labels:
        app: app11-b
    spec:
      containers:
      - name: color
        image: webofmars/colors:green
        resources: {}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app11-b
  name: app11-b
spec:
  type: ClusterIP
  selector:
    app: app11-b
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: app11
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app11
spec:
  tls:
  - hosts:
    - <user>.wmars.party
    secretName: app-cert
  rules:
  - host: <user>.wmars.party
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: app11-a
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: app11-b
            port:
              number: 80
